[tool.poetry]
name = "gds-python"
version = "0.0.3"
description = ""
authors = ["David Allen <david.allen@neo4j.com>"]

[tool.poetry.dependencies]
python = "^3.7"
neo4j = "^4.2.1"
networkx = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
