# replace with your username:
name = gds-python
version = 0.0.1
author = moxious
author_email = moxious@oldhat.org
description = Python wrappers for Neo4j GDS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moxious/gds-python

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src